DeveloperOrg/force-app/main/default/objects/Account/fields/Account_Risk_Category__c.field-meta.xml
<CustomField>
    <fullName>Account_Risk_Category__c</fullName>
    <label>Account Risk Category</label>
    <length>50</length>
    <type>Text</type>
</CustomField>