DeveloperOrg/force-app/main/default/objects/Account/fields/account_type__c.field-meta.xml
<CustomField>
    <fullName>account_type__c</fullName>
    <label>account type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>