DeveloperOrg/force-app/main/default/objects/Account/fields/BiomeFX_Current_Last_Month_Revenue__c.field-meta.xml
<CustomField>
    <fullName>BiomeFX_Current_Last_Month_Revenue__c</fullName>
    <label>BiomeFX Current  Month Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>