DeveloperOrg/force-app/main/default/objects/Account/fields/BiomeFX_Revenue_All_Time__c.field-meta.xml
<CustomField>
    <fullName>BiomeFX_Revenue_All_Time__c</fullName>
    <label>BiomeFX Revenue All Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>