DeveloperOrg/force-app/main/default/objects/Account/fields/BiomeFX_Revenue_Last_365_Days__c.field-meta.xml
<CustomField>
    <fullName>BiomeFX_Revenue_Last_365_Days__c</fullName>
    <label>BiomeFX Revenue Last 365 Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>