DeveloperOrg/force-app/main/default/objects/Account/fields/Current_Month_revenue__c.field-meta.xml
<CustomField>
    <fullName>Current_Month_revenue__c</fullName>
    <label>Current Month revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>