DeveloperOrg/force-app/main/default/objects/Account/fields/Current_Year_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_Revenue__c</fullName>
    <label>Current Year Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>