DeveloperOrg/force-app/main/default/objects/Account/fields/Days_Since_Frist_0rder__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Frist_0rder__c</fullName>
    <label>Days Since Frist 0rder</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>