DeveloperOrg/force-app/main/default/objects/Account/fields/Days_Since_Last_order__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_order__c</fullName>
    <label>Days Since Last order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>