DeveloperOrg/force-app/main/default/objects/Account/fields/First_order_Date__c.field-meta.xml
<CustomField>
    <fullName>First_order_Date__c</fullName>
    <label>First order Date</label>
    <type>Date</type>
</CustomField>