DeveloperOrg/force-app/main/default/objects/Account/fields/First_order_Date_oF_BiomeFx__c.field-meta.xml
<CustomField>
    <fullName>First_order_Date_oF_BiomeFx__c</fullName>
    <label>First order Date oF BiomeFx</label>
    <type>Date</type>
</CustomField>