DeveloperOrg/force-app/main/default/objects/Account/fields/Last_365_Days_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Last_365_Days_Revenue__c</fullName>
    <label>Last 365 Days Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>