DeveloperOrg/force-app/main/default/objects/Account/fields/Last_order_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_order_Date__c</fullName>
    <label>Last order Date</label>
    <type>Date</type>
</CustomField>