DeveloperOrg/force-app/main/default/objects/Account/fields/Last_order_Date_of_BiomeFX__c.field-meta.xml
<CustomField>
    <fullName>Last_order_Date_of_BiomeFX__c</fullName>
    <label>Last order Date of BiomeFX</label>
    <type>Date</type>
</CustomField>