DeveloperOrg/force-app/main/default/objects/Account/fields/Legacy_ERP__c.field-meta.xml
<CustomField>
    <fullName>Legacy_ERP__c</fullName>
    <label>Legacy ERP</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Legacy Org A</fullName>
            </value>
            <value>
                <fullName>Legacy Org B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>