DeveloperOrg/force-app/main/default/objects/Account/fields/Meassage__c.field-meta.xml
<CustomField>
    <fullName>Meassage__c</fullName>
    <label>Meassage</label>
    <length>100</length>
    <type>Text</type>
</CustomField>