DeveloperOrg/force-app/main/default/objects/Account/fields/opp_roll_up_summary__c.field-meta.xml
<CustomField>
    <fullName>opp_roll_up_summary__c</fullName>
    <label>opp roll-up summary</label>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>