DeveloperOrg/force-app/main/default/objects/Account/fields/StateCode__c.field-meta.xml
<CustomField>
    <fullName>StateCode__c</fullName>
    <label>StateCode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>