DeveloperOrg/force-app/main/default/objects/Account/fields/Total_Revenue_All_Time__c.field-meta.xml
<CustomField>
    <fullName>Total_Revenue_All_Time__c</fullName>
    <label>Total Revenue All Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>