DeveloperOrg/force-app/main/default/objects/Account/recordTypes/Sales_Account.recordType-meta.xml
<RecordType>
    <fullName>Sales_Account</fullName>
    <active>true</active>
    <label>Sales Account</label>
</RecordType>