DeveloperOrg/force-app/main/default/objects/Account/validationRules/acc_Industry.validationRule-meta.xml
<ValidationRule>
    <fullName>acc_Industry</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( TEXT( Industry ) )</errorConditionFormula>
    <errorDisplayField>Industry</errorDisplayField>
    <errorMessage>Industry is mandatory</errorMessage>
</ValidationRule>