DeveloperOrg/force-app/main/default/objects/Account/validationRules/if_Both_Are_selected_show_me_Error.validationRule-meta.xml
<ValidationRule>
    <fullName>if_Both_Are_selected_show_me_Error</fullName>
    <active>false</active>
    <errorConditionFormula>AND(  INCLUDES(Legacy_ERP__c, &quot;Legacy Org A&quot;),
       INCLUDES(Legacy_ERP__c, &quot;Legacy Org B&quot;) )</errorConditionFormula>
    <errorDisplayField>Legacy_ERP__c</errorDisplayField>
    <errorMessage>You cannot select both Legacy Org A and Legacy Org B</errorMessage>
</ValidationRule>