DeveloperOrg/force-app/main/default/objects/Account/validationRules/name_UPPER.validationRule-meta.xml
<ValidationRule>
    <fullName>name_UPPER</fullName>
    <active>false</active>
    <errorConditionFormula>NOT( Name  =  UPPER( Name ) )</errorConditionFormula>
    <errorMessage>UPPER</errorMessage>
</ValidationRule>