DeveloperOrg/force-app/main/default/objects/Account/validationRules/Phone_when_created.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_when_created</fullName>
    <active>true</active>
    <errorConditionFormula>ISNEW()&amp;&amp;
(
 ISBLANK( Phone ) )</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Reciqed</errorMessage>
</ValidationRule>